[package]
name = "rlwe"
version = "0.1.0"
edition = "2021"
description = "Arithmetic in RLWE rings"
authors = ["zugzwang <francisco@vialprado.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
generic-array = "0.14.5"
num-bigint = "0.4.3"
num-traits = "0.2.14"
typenum = "1.15.0"

[dev-dependencies]
rand = "0.8.5"
